@@ -19,6 +19,6 @@ EXTRA_DIST = README README.CONFIG README.SM
 
 lib_LTLIBRARIES = libjabberd.la
 
-libjabberd_la_SOURCES = acl.c config.c heartbeat.c mio.c mio_ssl.c mio_tls.c mtq.c xdb.c deliver.c log.c mio_raw.c mio_xml.c subjectAltName_asn1_tab.c
+libjabberd_la_SOURCES = acl.c config.c heartbeat.c mio.c mio_ssl.c mio_tls.cc mtq.c xdb.c deliver.c log.c mio_raw.c mio_xml.c subjectAltName_asn1_tab.c
 libjabberd_la_LIBADD = -lexpat $(top_builddir)/jabberd/lib/libjabberdlib.la
 libjabberd_la_LDFLAGS = @LDFLAGS@ @VERSION_INFO@ -export-dynamic -version-info 1:0:0
